libs/@local/graph/query-builder-derive/tests/ui/fail/skip_duplicate.stderr
error: The attribute skip has been used multiple times on the same item
 --> tests/ui/fail/skip_duplicate.rs:5:21
  |
5 |     #[builder(skip, skip)]
  |                     ^^^^
